k8s/k8s/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: microshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/devopspankaj77/microshop/frontend:__IMAGE_TAG__ # github.sha se replace hoga
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microshop
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
